[package]
name = "dhclient"
version = "0.1.0"
authors = ["Bykov Igor <igorb.dev@websm.io>"]
edition = "2018"

[dependencies]
random-integer = "*"
libjail = { git = "https://github.com/kolgotko/libjail" }
serde_json = "*"
serde = "*"
serde_derive = "*"
libc = "*"
ipnetwork = "*"

[build-dependencies]
bindgen = "*"
